# OpenCL_Entropy

./: .gitignore  README.md  literature.md
ImageEntropy/: CMakeLists.txt
ImageEntropy/include/: opencl_utils.h
LocalEntropy/: CMakeLists.txt  Doxyfile  LocalEntropy.cpp  LocalEntropy.hpp  LocalEntropy_1.cpp  LocalEntropy_1.hpp  LocalEntropy_Kernel.cl  LocalEntropy_Kernels.cl
LocalEntropy/docs/html/: LocalEntropy_8hpp_source.html  annotated.html  classLocalEntropy.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  menudata.js
LocalEntropy/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js  variables_0.js
LocalEntropy/docs/latex/: annotated.tex  classLocalEntropy.tex  refman.tex
LocalEntropy/tests/: ellipseTest.cpp
python_model/: compare_outputs.py  config.py  entropy_our.py  entropy_scikit.py  requirements.txt  tiff2bmp.py
windows/src/: main.cpp
